feat/M-3.3: add logic
