# src/infrastructure/modules/Marketing/infrastructure/dtos/request/OnboardingUserRequestDto.ts
@@ -1,10 +1,0 @@
-export interface OnboardingUserRequestDto {
-  firstName: string;
-  lastName: string;
-  dateBirth: string;
-  objetive: string;
-  email: string;
-  repeatEmail: string;
-  password: string;
-  repeatPassword: string;
-}
