# src/infrastructure/modules/Marketing/infrastructure/dtos/response/UserInfoResponseDto.ts
@@ -1,7 +1,0 @@
-export interface UserInfoResponseDto {
-  email: string;
-  firstName: string;
-  lastName: string;
-  dateBirth: string;
-  objective: string;
-}
